--- a/NewsBrowser/NewsBrowser/NewsBrowser.csproj
+++ b/NewsBrowser/NewsBrowser/NewsBrowser.csproj
@@ -38,6 +38,7 @@
     <None Remove="ClientApp\src\app\fetch-data - kopiować\fetch-data.component.ts" />
     <None Remove="ClientApp\src\app\models\NewsDetails.ts" />
     <None Remove="ClientApp\src\app\models\SimpleNews.ts" />
+    <None Remove="ClientApp\src\app\models\tag.ts" />
     <None Remove="ClientApp\src\app\news-details\news-details.component.ts" />
   </ItemGroup>
 
@@ -47,6 +48,9 @@
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\models\newsDetails.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\tag.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
     <TypeScriptCompile Include="ClientApp\src\app\models\simpleNews.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\news-details\news-details.component.ts" />
   </ItemGroup>
