Added sbuscription search query and test way to add new news.

--- a/NewsBrowser/NewsBrowser/appsettings.json
+++ b/NewsBrowser/NewsBrowser/appsettings.json
@@ -10,5 +10,12 @@
     "Url": "http://localhost:9200/",
     "Index": "sample500000"
   },
+  "EmailConfiguration": {
+    "From": "test.swiapp@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "test.swiapp@gmail.com",
+    "Password": "XXXXXXXXX"
+  },
   "AllowedHosts": "*"
 }
