--- a/NewsBrowser/NewsBrowser/NewsBrowser.csproj
+++ b/NewsBrowser/NewsBrowser/NewsBrowser.csproj
@@ -46,6 +46,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="Satsuma">
+      <HintPath>bin/Debug/netcoreapp3.1/Satsuma.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\models\newsDetails.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\models\simpleNews.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\news-details\news-details.component.ts" />
