--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,25 +1,26 @@
 ---
 version: '2'
 services:
-  elasticsearch:
+  news-elasticsearch:
     image: elasticsearch:7.6.2
-    container_name: elasticsearch
+    container_name: news-elasticsearch
     environment:
       - discovery.type=single-node
     volumes:
-      - es_volume:/usr/share/elasticsearch
+      - news_es_volume:/usr/share/elasticsearch
     ports:
       - "9200:9200"
       - "9300:9300"
     networks:
       - news-app
-  webapp:
+  news-webapp:
     container_name: webapp-container
     build:
       context: ../
       dockerfile: ./docker/news-browser-app/Dockerfile
     depends_on:
-      - elasticsearch
+      - news-elasticsearch
+    restart: "always"
     volumes:
       - /mnt/149654A1965484E0/semestr-IIIm/SWI/P/solr/data/eng-news-300:/home/data/documents
       - ./entrypoint.sh:/entrypoint.sh
@@ -31,7 +32,7 @@ services:
 
 
 volumes:
-  es_volume:
+  news_es_volume:
   data_volume:
 
 networks:
