--- a/NewsBrowser/NewsBrowser/ClientApp/package.json
+++ b/NewsBrowser/NewsBrowser/ClientApp/package.json
@@ -31,7 +31,8 @@
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
-    "zone.js": "0.9.1"
+    "zone.js": "0.9.1",
+    "hammerjs": "^2.0.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.24",
