--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - news-elasticsearch
     restart: "always"
     volumes:
-      - /mnt/149654A1965484E0/semestr-IIIm/SWI/P/solr/data/eng-news-300:/home/data/documents
+      - /PATH/TO/DOCUMENTS/DIR:/home/data/documents
       - ./entrypoint.sh:/entrypoint.sh
     entrypoint: ["/entrypoint.sh", "/home/data/documents", "sample500000"]
     ports:
